Update filter with percentage of nodes
